[package]
name = "alariachain"
version = "0.1.0"
authors = ["Diego Sierra fernandez"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# time = "0.1"
sha2 = "0.8.0"
serde = { version = "1.0.101", features = ["derive"] }
bincode = "1.2.0"
leveldb = "0.8.4"
serde_json = "1.0.41"
nanoid = "0.1.3"
merkle = "1.11.0"

[dependencies.clap]
git = "https://github.com/clap-rs/clap.git"